--- a/email/template.html
+++ b/email/template.html
@@ -5,7 +5,7 @@
 <div style="border-radius: 5px; box-shadow: 0 2px 5px 1px rgba(64,60,67,.16); padding: 1%">
     <div class="w-28 lg:pr-6  lg:flex-none lg:w-auto">
         <a href="https://www.storicard.com/">
-            <img src="https://d2pnsmz45e0v9n.cloudfront.net/d4h65p%2Fpreview%2F56600441%2Fmain_full.png?response-content-disposition=inline%3Bfilename%3D%22main_full.png%22%3B&response-content-type=image%2Fpng&Expires=1710632913&Signature=BJBeLKXcFyTIJd27cuPB9C4g-gVy7HYYRzTUzor5jw1Z6qJrMb4smn3oDhBb-ZmbhWiT~OBqJcKRFmWHNVJ-L6lNilcwlwqSQN1ZodkiKY8fL7ZmSImfh7Ou5LXm~sbG7TAXfOUEpJXHV6dSJEoCfh7KoW9zWTAuD19D~05yFME~xVN7YSuc2Lu4ydjcx-2wZE4vGsEI2B2iHS2PzqhF4543DamtwTyYHSSAmFNmilyxnxbBWx~1Ga9Lr7pNF6b5DlIqR55Ai9ZzqXg2eC38z-~WCajrhlG5xPrumq59UEUbdat-0nrNsgGQzBbbGrAWNhvn~H-hCeoBilJ8MvkJSw__&Key-Pair-Id=APKAJT5WQLLEOADKLHBQ"
+            <img src="https://live-files.s3.amazonaws.com/stori.png"
                  alt="img">
         </a>
     </div>
